--- a/lesson_feed/index.html
+++ b/lesson_feed/index.html
@@ -54,7 +54,7 @@
 
     <div class="justify-content-between w-100 d-flex pt-3">
 
-      <form class="form-inline">
+      <form class="form-inline clickble">
         <div class="d-none d-md-block mr-2">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor"
             xmlns="http://www.w3.org/2000/svg">
@@ -74,7 +74,7 @@
 
       </form>
 
-      <ul class="navbar-nav text-center">
+      <ul class="navbar-nav text-center clickble">
         <li class="nav-item active" id="login_button">
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
           </a>
@@ -123,20 +123,20 @@
             <h4 class="text-muted mb-3 mr-3 mr-md-0">Recent</h4>
             <div class="d-flex flex-md-column">
               <div class="custom-control custom-radio toggle">
-                <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-                <label class="custom-control-label" for="customRadio1">24 hour</label>
+                <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input clickble">
+                <label class="custom-control-label clickble" for="customRadio1">24 hour</label>
               </div>
               <div class="custom-control custom-radio toggle">
-                <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-                <label class="custom-control-label" for="customRadio2">1 week</label>
+                <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input clickble">
+                <label class="custom-control-label clickble" for="customRadio2">1 week</label>
               </div>
               <div class="custom-control custom-radio toggle">
-                <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
-                <label class="custom-control-label" for="customRadio3">1 year</label>
+                <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input clickble">
+                <label class="custom-control-label clickble" for="customRadio3">1 year</label>
               </div>
               <div class="custom-control custom-radio toggle">
-                <input type="radio" id="customRadio4" name="customRadio" class="custom-control-input" checked="checked">
-                <label class="custom-control-label active" for="customRadio4">All time</label>
+                <input type="radio" id="customRadio4" name="customRadio" class="custom-control-input clickble" checked="checked">
+                <label class="custom-control-label active clickble" for="customRadio4">All time</label>
               </div>
 
             </div>
@@ -148,27 +148,27 @@
             <h4 class="text-muted mb-3 mr-3 mr-md-0">Filter</h4>
             <div class="d-flex flex-md-column ">
               <span style="min-width:4rem;">
-                <label class="switch">
+                <label class="switch clickble">
                   <input type="checkbox">
                   <span class="slider round"></span>
                 </label>
-                <label class="ml-1">Ads</label>
+                <label class="ml-1 clickble">Ads</label>
               </span>
 
               <span style="min-width:8rem;">
-                <label class="switch ml-5 ml-md-0">
+                <label class="switch ml-5 ml-md-0 clickble">
                   <input type="checkbox">
                   <span class="slider round"></span>
                 </label>
-                <label class="ml-1">Location based</label>
+                <label class="ml-1 clickble">Location based</label>
               </span>
 
               <span style="min-width:8rem;">
-                <label class="switch ml-5 ml-md-0">
+                <label class="switch ml-5 ml-md-0 clickble">
                   <input type="checkbox">
                   <span class="slider round"></span>
                 </label>
-                <label class="ml-1">Cookie tracking</label>
+                <label class="ml-1 clickble">Cookie tracking</label>
               </span>
 
             </div>
@@ -219,9 +219,9 @@
           </span>
 
           <span class="p-1 rounded btn">
-            <svg width="25px" height="25px" viewBox="0 0 16 16" class="bi bi-heart" fill="red"
+            <svg width="25px" height="25px" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" onclick="like(event)"
               xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
+              <path fill-rule="evenodd" 
                 d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
             </svg>
             45
@@ -274,7 +274,7 @@
           </span>
 
           <span class="p-1 rounded btn">
-            <svg width="25px" height="25px" viewBox="0 0 16 16" class="bi bi-heart" fill="red"
+            <svg width="25px" height="25px" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" onclick="like(event)"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd"
                 d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
@@ -328,7 +328,7 @@
           </span>
 
           <span class="p-1 rounded btn">
-            <svg width="25px" height="25px" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor"
+            <svg width="25px" height="25px" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" onclick="like(event)"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd"
                 d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
@@ -364,7 +364,7 @@
     <div class="footer-copyright text-md-right  text-center py-md-3 px-3 text-muted font-weight-light"
       style="font-size: 0.7em;">
 
-      <a href="mailto:info@safebook.se">info@safebook.se</a>
+      <a class="clickble" href="mailto:info@safebook.se">info@safebook.se</a>
       © 2020 Copyright safebook.se
 
     </div>
